mynode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynode-app
  namespace: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mynode-app
  template:
    metadata:
      labels:
        app: mynode-app
    spec:
      containers:
      - name: mynode-app
        image: matharoo89/mynode-app
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: mycreds
